--- a/QC.ipynb
+++ b/QC.ipynb
@@ -2,14 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "┌ Info: Precompiling Distributions [31c24e10-a181-5473-b8eb-7969acd0382f]\n",
+      "└ @ Base loading.jl:1260\n",
       "┌ Info: Precompiling QuantumCircuits [01625e0c-f410-4aff-9d33-8c5e8b164a60]\n",
+      "└ @ Base loading.jl:1260\n",
+      "┌ Info: Precompiling QuantumOptics [6e0679c1-51ea-5a7c-ac74-d61b76210b0c]\n",
       "└ @ Base loading.jl:1260\n"
      ]
     }
@@ -34,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,9 +80,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "InterruptException",
+     "evalue": "InterruptException:",
+     "output_type": "error",
+     "traceback": [
+      "InterruptException:",
+      "",
+      "Stacktrace:",
+      " [1] copy at ./broadcast.jl:858 [inlined]",
+      " [2] materialize(::Base.Broadcast.Broadcasted{Base.Broadcast.DefaultArrayStyle{1},Nothing,typeof(SoftGlobalScope._softscope),Tuple{Array{Any,1},Base.RefValue{Set{Symbol}},Base.RefValue{Set{Symbol}},Bool,Bool}}) at ./broadcast.jl:820",
+      " [3] _softscope(::Expr, ::Set{Symbol}, ::Set{Symbol}, ::Bool, ::Bool) at /Users/luke/.julia/packages/SoftGlobalScope/cSbw5/src/SoftGlobalScope.jl:152",
+      " [4] _softscope at /Users/luke/.julia/packages/SoftGlobalScope/cSbw5/src/SoftGlobalScope.jl:124 [inlined]",
+      " [5] _broadcast_getindex_evalf(::typeof(SoftGlobalScope._softscope), ::Expr, ::Set{Symbol}, ::Set{Symbol}, ::Bool) at ./broadcast.jl:631",
+      " [6] _broadcast_getindex(::Base.Broadcast.Broadcasted{Base.Broadcast.DefaultArrayStyle{1},Tuple{Base.OneTo{Int64}},typeof(SoftGlobalScope._softscope),Tuple{Base.Broadcast.Extruded{Array{Any,1},Tuple{Bool},Tuple{Int64}},Base.RefValue{Set{Symbol}},Base.RefValue{Set{Symbol}},Bool}}, ::Int64) at ./broadcast.jl:604",
+      " [7] getindex at ./broadcast.jl:564 [inlined]",
+      " [8] copyto_nonleaf!(::Array{LineNumberNode,1}, ::Base.Broadcast.Broadcasted{Base.Broadcast.DefaultArrayStyle{1},Tuple{Base.OneTo{Int64}},typeof(SoftGlobalScope._softscope),Tuple{Base.Broadcast.Extruded{Array{Any,1},Tuple{Bool},Tuple{Int64}},Base.RefValue{Set{Symbol}},Base.RefValue{Set{Symbol}},Bool}}, ::Base.OneTo{Int64}, ::Int64, ::Int64) at ./broadcast.jl:1004",
+      " [9] copy(::Base.Broadcast.Broadcasted{Base.Broadcast.DefaultArrayStyle{1},Tuple{Base.OneTo{Int64}},typeof(SoftGlobalScope._softscope),Tuple{Array{Any,1},Base.RefValue{Set{Symbol}},Base.RefValue{Set{Symbol}},Bool}}) at ./broadcast.jl:858",
+      " [10] materialize(::Base.Broadcast.Broadcasted{Base.Broadcast.DefaultArrayStyle{1},Nothing,typeof(SoftGlobalScope._softscope),Tuple{Array{Any,1},Base.RefValue{Set{Symbol}},Base.RefValue{Set{Symbol}},Bool}}) at ./broadcast.jl:820",
+      " [11] _softscope(::Expr, ::Set{Symbol}, ::Set{Symbol}, ::Bool, ::Bool) at /Users/luke/.julia/packages/SoftGlobalScope/cSbw5/src/SoftGlobalScope.jl:144",
+      " [12] _softscope at /Users/luke/.julia/packages/SoftGlobalScope/cSbw5/src/SoftGlobalScope.jl:124 [inlined]",
+      " [13] softscope(::Module, ::Expr) at /Users/luke/.julia/packages/SoftGlobalScope/cSbw5/src/SoftGlobalScope.jl:177"
+     ]
+    }
+   ],
    "source": [
     "Random.seed!(1)\n",
     "\n",
